--- a/public/styles.css
+++ b/public/styles.css
@@ -30,8 +30,8 @@ h1 span {
 
 .dictionary > .term {
   text-align: center;
-  max-width: 20rem;
-  margin-bottom: 3rem;
+  max-width: 16rem;
+  margin: 2rem;
   padding: 2rem;
   border-radius: 3px;
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.05), 0 5px 20px rgba(0, 0, 0, 0.1);
